添加海量点点击的示例，以及Marker动画的示例，添加华为地图的示例module

--- a/sample-gaode/src/main/res/values/strings.xml
+++ b/sample-gaode/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="gd_map_main_feature_item_smooth_move">轨迹平滑移动</string>
     <string name="gd_map_main_feature_item_drag_drop_select_point">DragDrop拖拽选点</string>
     <string name="gd_map_main_feature_item_route_plan">路径规划</string>
+    <string name="gd_map_main_feature_item_multipoint_click">海量点点击</string>
+    <string name="gd_map_main_feature_item_marker_animation">Marker动画</string>
 
 
     <string name="gd_map_location_gps_no_open">定位失败，打开定位服务来获取位置信息</string>
