--- a/sample-tencent/src/main/res/values/strings.xml
+++ b/sample-tencent/src/main/res/values/strings.xml
@@ -1,5 +1,20 @@
 <resources>
     <string name="app_name">OmniMap</string>
 
+    <string name="tx_map_main_feature_item_basic">基础功能</string>
+    <string name="tx_map_main_feature_item_overlay">简单的Overlay功能</string>
+    <string name="tx_map_main_feature_item_3dmap">3D地形图</string>
+    <string name="tx_map_main_feature_item_blue_location">地图定位蓝点功能</string>
+    <string name="tx_map_main_feature_item_smooth_move">轨迹平滑(移动/回放)</string>
+    <string name="tx_map_main_feature_item_drag_drop_select_point">Dragdrop拖拽选点</string>
+    <string name="tx_map_main_feature_item_movement_track">运动轨迹</string>
+    <string name="tx_map_main_feature_item_route_plan">路径规划</string>
+    <string name="tx_map_main_feature_item_multipoint_click">海量点点击</string>
+    <string name="tx_map_main_feature_item_marker_animation">Marker动画</string>
+    <string name="tx_map_main_feature_item_cluster_effect">点聚合效果</string>
 
+
+    <string name="tx_map_location_gps_no_open">定位失败，打开定位服务来获取位置信息</string>
+    <string name="tx_map_location_gps_dialog_cancel">取消</string>
+    <string name="tx_map_location_gps_dialog_ok">开启定位</string>
 </resources>
