--- a/sample-tencent/src/main/res/values/strings.xml
+++ b/sample-tencent/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="tx_map_main_feature_item_movement_track">运动轨迹</string>
     <string name="tx_map_main_feature_item_movement_track2">【播放】运动轨迹</string>
     <string name="tx_map_main_feature_item_route_plan">路径规划</string>
+    <string name="tx_map_main_feature_item_logistics">物流订单</string>
     <string name="tx_map_main_feature_item_multipoint_click">海量点点击</string>
     <string name="tx_map_main_feature_item_marker_animation">Marker动画</string>
     <string name="tx_map_main_feature_item_cluster_effect">点聚合效果</string>
