--- a/sample-huawei/src/main/res/values/strings.xml
+++ b/sample-huawei/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="map_scale_bar_unit_mi">米</string>
     <string name="map_scale_bar_unit_km">千米</string>
     <string name="map_scale_bar_unit_ft">英尺</string>
+    <string name="hw_map_location_gps_no_open">定位失败，打开定位服务来获取位置信息</string>
+    <string name="hw_map_location_gps_dialog_cancel">取消</string>
+    <string name="hw_map_location_gps_dialog_ok">开启定位</string>
 </resources>
