Update issue templates

--- a/.github/ISSUE_TEMPLATE/咨询功能使用问题.md
+++ b/.github/ISSUE_TEMPLATE/咨询功能使用问题.md
@@ -1,6 +1,6 @@
 ---
 name: 咨询功能使用问题
-about: 请删除注释文字后提交，未按模板填写的issue将在48小时内关闭​
+about: 请删除注释文字后提交，未按模板填写的issue将在7天内关闭​
 title: ''
 labels: ''
 assignees: ''
@@ -8,7 +8,7 @@ assignees: ''
 ---
 
 ---
-请删除注释文字后提交，未按模板填写的issue将在48小时内关闭
+请删除注释文字后提交，未按模板填写的issue将在7天内关闭
 ---
 
 ## 1. 使用的地图SDK类型  
